--- a/style.scss
+++ b/style.scss
@@ -119,6 +119,7 @@ p{
            font-size: 14px;
            justify-content: center;
            align-items: center;
+           transition: all 500ms ease-in-out;
            cursor: pointer;
            &:focus{
             background-color:$nuetral-very-dark-blue;
